[package]
name = "jet-programmable-rust-binding"
version = "0.1.0"
edition = "2018"
readme = "README.md"
authors = ["ByzanTeam <dev@byzan.team>"]
repository = "https://github.com/byzanteam/jet-programmable-rust-binding"

[dependencies.uuid]
version = "1.0.0"
default-features = false

[dependencies.time]
version = "0.3.9"
default-features = false
features = ["parsing", "macros", "formatting"]

[dependencies.serde_json]
version = "1.0"
default-features = false
features = ["alloc"]
